Small change to mainPage

--- a/examples/MultiPage/MultiPageDemo.ipynb
+++ b/examples/MultiPage/MultiPageDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4885dfa3",
+   "id": "f0842f6c",
    "metadata": {},
    "source": [
     "### Using mainPage and page to create multi-page applications"
@@ -10,39 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "996cbe0c",
+   "execution_count": null,
+   "id": "8365f05f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "930b0fae0ba74a33acd86209179c50fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "236a141ad4234d1bb1fec7506176117f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -87,27 +58,28 @@
     "                                      titleheight='dense', show=True, addclosebuttons=True, width=500,\n",
     "                                      fullscreen=False, content=[], output=output)\n",
     "\n",
-    "# Create the page for Function 1\n",
-    "def on_page1():\n",
-    "    p = page.page(title, 'Function 1', output,\n",
+    "# Create a page\n",
+    "def on_page(index):\n",
+    "    p = page.page(title, 'Function %d'%index, output,\n",
     "                  titlecolor=settings.color_first, titledark=True, footercolor='#cccccc', footerdark=False,\n",
     "                  logoappurl='https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
     "                  on_logoapp=on_pageclick, copyrighttext='European Commission - Joint Research Centre',\n",
     "                  show_back=True, show_help=True, on_help=on_pageclick, show_credits=True, on_credits=on_pageclick)\n",
     "    card = p.create()\n",
-    "    card.children = ['Put widgets into the empty space of the page']\n",
+    "    card.children = ['Put widgets into the empty space of page %d'%index]\n",
     "    p.open()    \n",
     "\n",
-    "    \n",
     "# Add to the main page the button to open Function 1 page\n",
     "m.addButton('Function 1',\n",
-    "            #subtitle='Launch calculation of ...',\n",
     "            tooltip='Tooltip text to display on hover',\n",
     "            image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
-    "            onclick=on_page1)\n",
+    "            onclick=on_page, argument=1)\n",
     "\n",
     "# Add to the main page other buttons\n",
-    "for i in range(2,7): m.addButton('Function %d'%i, image='https://picsum.photos/seed/%d/200/200'%randrange(1000))\n",
+    "for i in range(2,7): m.addButton('Function %d'%i,\n",
+    "                                 image='https://picsum.photos/seed/%d/200/200'%randrange(1000),\n",
+    "                                 onclick=on_page,\n",
+    "                                 argument=i)\n",
     "\n",
     "# Display the main page\n",
     "m.open()"
@@ -116,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2824c67",
+   "id": "fa7e7601",
    "metadata": {},
    "outputs": [],
    "source": []
