--- a/src/vois/vuetify/cardTest.ipynb
+++ b/src/vois/vuetify/cardTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6caec860",
+   "execution_count": 11,
+   "id": "fc1d9bc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2be3257bf681480fa111b31aad4c6c24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(events=['clicked'], icon='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAACXBIWXMAA…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a6c057ff8184f7dadeea707d16bc5b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run card.py\n",
     "\n",
@@ -37,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed7e3691",
+   "id": "b01773f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb0a2a9",
+   "id": "98dae372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,39 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "be5d0198",
+   "execution_count": null,
+   "id": "a6c54563",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbcba5451b484f8a9b6dc6af83ac0888",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "card(events=['clicked'], height='250px', iconsize='0px', imagesize='0px', subtitle='Sed ut perspiciatis unde o…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df9b4edb7b8346678077c1fa35a7c6de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Card with fixed height (TODO: add scrolling)\n",
     "%run card.py\n",
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b65b27",
+   "id": "ed68b6a3",
    "metadata": {},
    "outputs": [],
    "source": []
