--- a/src/vois/vuetify/mainPageTest.ipynb
+++ b/src/vois/vuetify/mainPageTest.ipynb
@@ -2,17 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a63119d5",
+   "execution_count": 3,
+   "id": "acb7c746",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cfaba73a56de436984d00f6980b1ddc6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21ab984b59fe4cd1a64564aa811c34cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run mainPage.py\n",
     "\n",
     "from random import randrange\n",
+    "from ipywidgets import widgets\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
     "\n",
     "def onclick1():\n",
-    "    print(\"Clicked Function 1\")\n",
+    "    with output:\n",
+    "        print(\"Clicked Function 1\")\n",
     "    \n",
     "m = mainPage(title='mainPage demo',\n",
     "             subtitle='Showcase how easy is to create a front page for an app',\n",
@@ -39,10 +73,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79e92ea7",
+   "execution_count": 1,
+   "id": "c0db43e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4f4895a72c348938054a63d880c03e1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "addButton() got an unexpected keyword argument 'argument'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_385/809771380.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m m.addButton('Function 1', tooltip='Tooltip text to display on hover function1',\n\u001b[0;32m---> 36\u001b[0;31m             image=randomPicture(), onclick=onclick, argument=1)\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m m.addButton('Function 2', tooltip='Tooltip text to display on hover function2',\n",
+      "\u001b[0;31mTypeError\u001b[0m: addButton() got an unexpected keyword argument 'argument'"
+     ]
+    }
+   ],
    "source": [
     "# Basic multi-page app\n",
     "from vois.vuetify import mainPage, page\n",
@@ -60,18 +120,11 @@
     "def randomPicture():\n",
     "    return 'https://picsum.photos/seed/%d/200/200'%randrange(1000)\n",
     "\n",
-    "def onclick1():\n",
-    "    p = page.page(title, 'Function 1', output, titlecolor='#808dc4', titledark=True, footercolor='#cccccc',\n",
+    "def onclick(pagenumber):\n",
+    "    p = page.page(title, 'Function %d'%pagenumber, output, titlecolor='#808dc4', titledark=True, footercolor='#cccccc',\n",
     "                  logoappurl=logo, copyrighttext=copyright)\n",
     "    card = p.create()\n",
-    "    card.children = ['Put widgets into the empty space of the page1']\n",
-    "    p.open()    \n",
-    "\n",
-    "def onclick2():\n",
-    "    p = page.page(title, 'Function 2', output, titlecolor='#808dc4', titledark=True, footercolor='#cccccc',\n",
-    "                  logoappurl=logo, copyrighttext=copyright)\n",
-    "    card = p.create()\n",
-    "    card.children = ['Put widgets into the empty space of the page2']\n",
+    "    card.children = ['Put widgets into the empty space of the page %d'%pagenumber]\n",
     "    p.open()    \n",
     "\n",
     "m = mainPage.mainPage(title='MultiPage Demo',\n",
@@ -86,12 +139,12 @@
     "                      text_color='#222222')\n",
     "\n",
     "m.addButton('Function 1', tooltip='Tooltip text to display on hover function1',\n",
-    "            image=randomPicture(), onclick=onclick1)\n",
+    "            image=randomPicture(), onclick=onclick, argument=1)\n",
     "\n",
     "m.addButton('Function 2', tooltip='Tooltip text to display on hover function2',\n",
-    "            image=randomPicture(), onclick=onclick2)\n",
+    "            image=randomPicture(), onclick=onclick2, argument=2)\n",
     "\n",
-    "for i in range(3,7): m.addButton('Function %d'%i, image=randomPicture())\n",
+    "for i in range(3,7): m.addButton('Function %d'%i, image=randomPicture(), argument=i)\n",
     "\n",
     "m.open()"
    ]
@@ -99,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25bef680",
+   "id": "b5800e33",
    "metadata": {},
    "outputs": [],
    "source": []
