Updated MultiPage demo

--- a/examples/MultiPage/MultiPageDemo.ipynb
+++ b/examples/MultiPage/MultiPageDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0842f6c",
+   "id": "4a13af06",
    "metadata": {},
    "source": [
     "### Using mainPage and page to create multi-page applications"
@@ -10,10 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8365f05f",
+   "execution_count": 1,
+   "id": "45af7ace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "baf5d27ebea140e0b7a7f364c34be027",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "32e77ecf685740998750f2873a3a3127",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
@@ -88,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7e7601",
+   "id": "d446021f",
    "metadata": {},
    "outputs": [],
    "source": []
