--- a/src/vois/vuetify/mainPageTest.ipynb
+++ b/src/vois/vuetify/mainPageTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acb7c746",
+   "id": "78ea6959",
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c0db43e5",
+   "execution_count": 3,
+   "id": "bba6a2e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4f4895a72c348938054a63d880c03e1",
+       "model_id": "11455511e24c4bda9e1fe64a23dee1d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,15 +92,18 @@
      "output_type": "display_data"
     },
     {
-     "ename": "TypeError",
-     "evalue": "addButton() got an unexpected keyword argument 'argument'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_385/809771380.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m m.addButton('Function 1', tooltip='Tooltip text to display on hover function1',\n\u001b[0;32m---> 36\u001b[0;31m             image=randomPicture(), onclick=onclick, argument=1)\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m m.addButton('Function 2', tooltip='Tooltip text to display on hover function2',\n",
-      "\u001b[0;31mTypeError\u001b[0m: addButton() got an unexpected keyword argument 'argument'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9c66f9659fe45f1b39ab3c2baa0eca5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -142,9 +145,9 @@
     "            image=randomPicture(), onclick=onclick, argument=1)\n",
     "\n",
     "m.addButton('Function 2', tooltip='Tooltip text to display on hover function2',\n",
-    "            image=randomPicture(), onclick=onclick2, argument=2)\n",
+    "            image=randomPicture(), onclick=onclick, argument=2)\n",
     "\n",
-    "for i in range(3,7): m.addButton('Function %d'%i, image=randomPicture(), argument=i)\n",
+    "for i in range(3,7): m.addButton('Function %d'%i, image=randomPicture(), onclick=onclick, argument=i)\n",
     "\n",
     "m.open()"
    ]
@@ -152,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5800e33",
+   "id": "f0632773",
    "metadata": {},
    "outputs": [],
    "source": []
