Width of dialogs also as string

--- a/src/vois/vuetify/dialogGenericTest.ipynb
+++ b/src/vois/vuetify/dialogGenericTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c979aaf",
+   "id": "871035fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "s = switch.switch(True, 'PNG format', onchange=on_s_change)\n",
     "    \n",
     "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
-    "                    addclosebuttons=False, width=600, persistent=True, #dark=True, \n",
+    "                    addclosebuttons=False, width=\"20vw\", persistent=True, #dark=True, \n",
     "                    addokcancelbuttons=True, on_ok=on_ok, on_cancel=on_cancel,\n",
     "                    fullscreen=False, content=[s.draw()], output=output)\n",
     "\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11adf64d",
+   "id": "3181ccf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a34a74",
+   "id": "3a84a6a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33c3dc33",
+   "id": "413ec7d0",
    "metadata": {},
    "outputs": [],
    "source": []
