--- a/src/vois/vuetify/dialogMessageTest.ipynb
+++ b/src/vois/vuetify/dialogMessageTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ed406c",
+   "id": "daca15d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
     "display(output)\n",
     "\n",
     "e = dialogMessage(title='Error', text='Sorry but the task could not be completed<br>because there are errors in the code to save in PNG format',\n",
-    "                  show=True, width=450, output=output)"
+    "                  show=True, width=\"20vw\", output=output)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921a161a",
+   "id": "3ebe9670",
    "metadata": {},
    "outputs": [],
    "source": []
