--- a/src/vois/vuetify/dialogYesNoTest.ipynb
+++ b/src/vois/vuetify/dialogYesNoTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb10575",
+   "id": "886b4966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
     "    \n",
     "%run dialogYesNo.py\n",
     "\n",
-    "dlg = dialogYesNo(title='Question', text='Confirm removal of the selected file?', titleheight=40, width=400, output=output,\n",
+    "dlg = dialogYesNo(title='Question', text='Confirm removal of the selected file?', titleheight=40, width=\"30vw\", output=output,\n",
     "                  show=True, transition='dialog-bottom-transition', on_yes=on_yes, on_no=on_no)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338f70fc",
+   "id": "c6e97619",
    "metadata": {},
    "outputs": [],
    "source": []
