Added padding to toggle widget

--- a/src/vois/vuetify/svgsGridTest.ipynb
+++ b/src/vois/vuetify/svgsGridTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec289dd9",
+   "execution_count": 3,
+   "id": "d15882ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "769a5618c3984a68b69a2ffee636e8c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "svgsGrid(cols=1, events=['clicked'], height='120px', ripple=True, svgitems=[{'svg': '<img src=\"data:image/svg+…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f990191286784c70b4711fdd2a6e0214",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import glob\n",
     "import ipyvuetify as v\n",
@@ -22,7 +51,7 @@
     "        print(index)\n",
     "\n",
     "# Make sure to list some existing SVG files...\n",
-    "files = glob.glob(\"./maki/icons/*\")\n",
+    "files = glob.glob(\"/eos/jeodpp/data/projects/JEODPP/view/mapnik/material-design-icons/svg/outlined/b*\")\n",
     "filepaths = sorted(files)\n",
     "\n",
     "svgsize = 80\n",
@@ -36,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d66d954",
+   "id": "15ea991e",
    "metadata": {},
    "outputs": [],
    "source": []
