--- a/src/vois/vuetify/toggleTest.ipynb
+++ b/src/vois/vuetify/toggleTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b318f9d3",
+   "id": "c633f462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "        print(value)\n",
     "\n",
     "t = toggle(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'], tooltips=['Tooltip for label1'], \n",
-    "           onchange=onchange, row=False, width=250, justify='start', rounded=False, outlined=False, dark=False)\n",
+    "           onchange=onchange, row=False, width=250, justify='start', rounded=False, outlined=False, dark=False, paddingcol=1)\n",
     "\n",
     "display(t.draw())\n",
     "display(output)"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "438e978b",
+   "id": "f63929bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd4ebf4",
+   "id": "6eeca819",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vois.vuetify import toggle\n",
+    "%run toggle.py\n",
+    "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "\n",
@@ -50,8 +51,8 @@
     "    with output:\n",
     "        print(index)\n",
     "\n",
-    "t = toggle.toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
-    "                  onchange=onchange, row=False, width=150, rounded=False)\n",
+    "t = toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
+    "           onchange=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0)\n",
     "\n",
     "display(t.draw())\n",
     "display(output)"
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f023acac",
+   "id": "21bc3230",
    "metadata": {},
    "outputs": [],
    "source": []
