Added tile flag to toggle and button

--- a/src/vois/vuetify/buttonTest.ipynb
+++ b/src/vois/vuetify/buttonTest.ipynb
@@ -2,10 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c4adfcb",
+   "execution_count": 3,
+   "id": "3d428e4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a091a5bf3fba454f8b869e9a3770e5ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text']…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da044908eb874e4b9bb66865e28c8b18",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Container(children=[Tooltip(bottom=True, children=['Example of an extremely long tooltip text']…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "236ec277152a4d7dac29dccb3a5a6ac5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Container(children=[Tooltip(bottom=True, children=['Open a URL'], color='#999999', layout=None,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run button.py\n",
     "\n",
@@ -19,7 +62,7 @@
     "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='black', rounded=True)\n",
     "\n",
     "b2 = button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False, \n",
-    "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, \n",
+    "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, tile=True,\n",
     "            colorselected=settings.color_first, colorunselected='green')\n",
     "\n",
     "b3 = button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/contact_en', target=\"_blank\", tooltip='Open a URL')\n",
@@ -32,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09c7829",
+   "id": "87d6ad2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd917899",
+   "id": "d97c288a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5a51914",
+   "id": "dddb071f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2497db7",
+   "id": "37c8718d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee2dd021",
+   "id": "453cd3b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "746756a0",
+   "id": "37ad558d",
    "metadata": {},
    "outputs": [],
    "source": []
