--- a/src/vois/vuetify/toggleTest.ipynb
+++ b/src/vois/vuetify/toggleTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c633f462",
+   "id": "a42146d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63929bf",
+   "id": "f243dbfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eeca819",
+   "id": "2ae8f8ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "        print(index)\n",
     "\n",
     "t = toggle(0, ['Option 1', 'Option 2', 'Option 3'], tooltips=['Tooltip for option 1'],\n",
-    "           onchange=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0)\n",
+    "           onchange=onchange, row=True, width=150, rounded=False, justify='start', paddingrow=0, tile=True)\n",
     "\n",
     "display(t.draw())\n",
     "display(output)"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21bc3230",
+   "id": "740e39c8",
    "metadata": {},
    "outputs": [],
    "source": []
