Added displayvalues param to svgUtils.AnimatedPieChart

--- a/src/vois/interMapTest.ipynb
+++ b/src/vois/interMapTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "762dcc82",
+   "id": "0073e2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f9f211e5",
+   "id": "b8a79833",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c2c550",
+   "id": "d8bf5362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abe65fe9",
+   "id": "487f6ff7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43e625d",
+   "id": "a80e8137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841c4ac9",
+   "id": "12c32f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722ef56b",
+   "id": "912c6340",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc132bbd",
+   "id": "974e4564",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f580da43",
+   "id": "52ec55f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccf91a1f",
+   "id": "f23c785a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510cb2b2",
+   "id": "59708968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57117fe2",
+   "id": "30dbea89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68bf00a8",
+   "id": "2fd28657",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6443840b",
+   "id": "7c543183",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,10 +732,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "306a0bcb",
+   "execution_count": 1,
+   "id": "3131dd0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1b692e174544eff8ab97ad74373f0df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[52, 12], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_tex…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##################################################################################################\n",
     "# 2 layers with complex trivariate choropleth legend\n",
@@ -836,10 +851,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd50999d",
+   "execution_count": 2,
+   "id": "d7848b7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41c530c6e7e8459e974e9e3f6f479254",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 494 447\" preserveAspectRatio=\"xMidYMid meet\" …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(HTML(svg1))"
    ]
@@ -847,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab4ffd6",
+   "id": "6b77f273",
    "metadata": {},
    "outputs": [],
    "source": []
