--- a/src/vois/svgUtilsTest.ipynb
+++ b/src/vois/svgUtilsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2022c64",
+   "id": "fb817371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0f1312",
+   "id": "9e219e9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eaf80ee",
+   "id": "72739a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e342b6ee",
+   "id": "982a931d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32688665",
+   "id": "19b1a8cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de9ea150",
+   "id": "1f35facf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,39 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2771b1f4",
+   "execution_count": null,
+   "id": "63f345d4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dd7fcb85eec4ff7bf1b3405771dd429",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06ea558f0d0b457f90034b297cd5e776",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='calc(min(20vw, 35vh) + 14px)', width='min(20vw, 35vh)'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run svgUtils.py\n",
     "\n",
@@ -177,14 +148,14 @@
     "    \n",
     "out, txt = AnimatedPieChart(values=[10.0, 25.0, 18.0, 20.0, 9.5], labels=['aa<br>aa<br>', 'bbbbbb<br>bbbbbb', 'cccccccccccc', 'dddddddddddd', 'eee'], \n",
     "                            centerfontsize=28, fontsize=18, textweight=500, colors=px.colors.qualitative.D3, backcolor='#dfdfdf',\n",
-    "                            centertext='Sample', onclick=onclick, dimension='min(20vw, 35vh)', duration=1.0)\n",
+    "                            centertext='Sample', onclick=onclick, dimension='min(20vw, 35vh)', duration=1.0, displayvalues=False)\n",
     "display(out)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92b35550",
+   "id": "5b7c23db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2abae384",
+   "id": "4424edda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574fa09f",
+   "id": "6f8cb47a",
    "metadata": {},
    "outputs": [],
    "source": []
