--- a/src/vois/vuetify/pageTest.ipynb
+++ b/src/vois/vuetify/pageTest.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "226807df",
+   "execution_count": 9,
+   "id": "60122e56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0aeb82975344681a7e123a0a631e767",
+       "model_id": "89d98736938f4f4e8705fc004b46072b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -30,7 +30,6 @@
     "def on_click():\n",
     "    pass\n",
     "\n",
-    "\n",
     "def on_delete(*args):\n",
     "    pass\n",
     "\n",
@@ -43,7 +42,7 @@
     "         on_logoapp=on_click, copyrighttext='European Commission - Joint Research Centre',\n",
     "         show_back=True, show_help=True, on_help=on_click, show_credits=True, on_credits=on_click)\n",
     "\n",
-    "p.customButtonAdd('mdi-delete', 'Text tooltip', on_delete)\n",
+    "p.customButtonAdd('mdi-delete', 'Click here to delete your registration', on_delete)\n",
     "\n",
     "card = p.create()\n",
     "card.children = []\n",
@@ -53,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4d044715",
+   "id": "9946f30c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd4147c",
+   "id": "98b562ac",
    "metadata": {},
    "outputs": [],
    "source": []
