Added customclass to dialogGeneric

--- a/src/vois/vuetify/dialogGenericTest.ipynb
+++ b/src/vois/vuetify/dialogGenericTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871035fd",
+   "id": "919da033",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3181ccf0",
+   "id": "5fecae8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a84a6a8",
+   "id": "de96430e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "413ec7d0",
+   "id": "b756e103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of a dialog positioned on the bottom left side of the screen: use customclass!\n",
+    "\n",
+    "display(HTML('''\n",
+    "<style>\n",
+    ".bottomleftdialog {\n",
+    "    position: absolute;\n",
+    "    bottom: 0;\n",
+    "    left: 0;\n",
+    "}\n",
+    "</style>\n",
+    "'''))\n",
+    "    \n",
+    "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
+    "                    addclosebuttons=False, width=\"20vw\", persistent=True, #dark=True, \n",
+    "                    addokcancelbuttons=True, on_ok=on_ok, on_cancel=on_cancel,\n",
+    "                    fullscreen=False, content=[s.draw()], output=output, customclass='bottomleftdialog')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3061796",
    "metadata": {},
    "outputs": [],
    "source": []
