--- a/src/vois/vuetify/dialogGenericTest.ipynb
+++ b/src/vois/vuetify/dialogGenericTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "919da033",
+   "execution_count": 25,
+   "id": "7240e7be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13f1aa51d973490d9bd63414237c8603",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display\n",
     "from ipywidgets import widgets, Layout, HTML\n",
@@ -40,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fecae8e",
+   "id": "e656932b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de96430e",
+   "id": "8db69651",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b756e103",
+   "id": "076e18fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +99,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "3ed39460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = [HTML('<embed src=\"https://jeodpp.jrc.ec.europa.eu/jiplib-view?VECTORAPI_PDF=1&cmd=LUCASPDF&filepath=CY/635/616/63561628G.pdf\" width=\"1200\" height=\"850\" />')]\n",
+    "dlg = dialogGeneric(title='Settings', show=True,\n",
+    "                    addclosebuttons=True, persistent=False, width=\"min(1200px, 75.55vw)\",\n",
+    "                    addokcancelbuttons=False, on_ok=on_ok, on_cancel=on_cancel,\n",
+    "                    fullscreen=False, content=content, output=output, customclass='bottomleftdialog')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "038ee7c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = [HTML('<img src=\"https://jeodpp.jrc.ec.europa.eu/jiplib-view?VECTORAPI_JPG=1&cmd=LUCASPDF&filepath=ES/299/020/29902030G.jpg\" width=\"1200\" />')]\n",
+    "dlg = dialogGeneric(title='Settings', show=True,\n",
+    "                    addclosebuttons=True, persistent=False, width=\"min(1200px, 75.55vw)\",\n",
+    "                    addokcancelbuttons=False, on_ok=on_ok, on_cancel=on_cancel,\n",
+    "                    fullscreen=False, content=content, output=output, customclass='bottomleftdialog')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e143aa3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run dialogGeneric.py\n",
+    "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
+    "                    addclosebuttons=True, width=\"20vw\", persistent=False, no_click_animation=False,\n",
+    "                    fullscreen=False, content=[s.draw()], output=output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d3061796",
+   "id": "aa9fa4b0",
    "metadata": {},
    "outputs": [],
    "source": []
