Added svgBarChart widget

--- a/docs/3.1_referenceGeneral.rst
+++ b/docs/3.1_referenceGeneral.rst
@@ -68,6 +68,14 @@ leafletMap module
 
 .. image:: figures/line.png
 
+svgBarChart module
+----------------------
+
+.. automodule:: svgBarChart
+    :members:
+
+.. image:: figures/line.png
+
 svgBubblesChart module
 ----------------------
 
