Added colors_on_minmax_values param to svgBarChart

--- a/src/vois/svgBarChartTest.ipynb
+++ b/src/vois/svgBarChartTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35b768c9",
+   "id": "69313e36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "values = np.random.uniform(low=0.1, high=1.0, size=(len(names)))\n",
     "\n",
     "# Randomly generated stdevs for each country\n",
-    "stddevs = np.random.uniform(low=0.01, high=0.2, size=(len(names)))\n",
+    "stddevs = np.random.uniform(low=0.01, high=0.1, size=(len(names)))\n",
     "\n",
     "debug = widgets.Output()\n",
     "display(debug)\n",
@@ -47,6 +47,7 @@
     "                  enabledeselect=True,\n",
     "                  showselection=False,\n",
     "                  minallowed_value=0.0,\n",
+    "                  maxallowed_value=1.0,\n",
     "                  on_change=on_change)\n",
     "\n",
     "display(out)"
@@ -55,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cab3809",
+   "id": "68cbb4cf",
    "metadata": {},
    "outputs": [],
    "source": []
