Added parameters to svgBarChart

--- a/src/vois/svgBarChartTest.ipynb
+++ b/src/vois/svgBarChartTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cca002c8",
+   "execution_count": 126,
+   "id": "db4ca2bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3c44dd7aa774a53a8c67c4248d54c37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "77c86e077fd64c5e8c4afe582fc8c46e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='calc(35.000000vh + 30px)', margin='0px 0px 0px 0px', width='calc(90.000000vw + 30…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run svgBarChart.py\n",
     "\n",
@@ -14,13 +43,18 @@
     "from vois import eucountries as eu\n",
     "\n",
     "# Names of EU countries\n",
-    "names  = [c.iso2code for c in eu.countries.EuropeanUnion()]\n",
+    "names  = sorted([c.iso2code for c in eu.countries.EuropeanUnion()]*7)\n",
     "\n",
     "# Randomly generated values for each country\n",
     "values = np.random.uniform(low=0.1, high=1.0, size=(len(names)))\n",
     "\n",
     "# Randomly generated stdevs for each country\n",
     "stddevs = np.random.uniform(low=0.01, high=0.1, size=(len(names)))\n",
+    "\n",
+    "ordered = sorted(zip(names,values,stddevs), key=lambda x: -x[1]) # Reverse order\n",
+    "names = [x[0] for x in ordered]\n",
+    "values = [x[1] for x in ordered]\n",
+    "stddevs = [x[2] for x in ordered]\n",
     "\n",
     "debug = widgets.Output()\n",
     "display(debug)\n",
@@ -33,19 +67,28 @@
     "                  names=names,\n",
     "                  values=values,\n",
     "                  stddevs=stddevs,\n",
-    "                  width=39.0,\n",
+    "                  selectedname='IT',\n",
+    "                  width=90.0,\n",
     "                  height=35.0,\n",
-    "                  fontsize=0.7,\n",
+    "                  fontsize=0.22,\n",
     "                  barstrokecolor='#44444400',\n",
     "                  xaxistextcolor='#666666',\n",
+    "                  xaxistextsizemultiplier=0.8,\n",
+    "                  xaxistextangle=-90.0,\n",
+    "                  xaxistextextraspace=1.0,\n",
+    "                  xaxistextdisplacey=-0.2,\n",
+    "                  valuestextsizemultiplier=0.7,\n",
+    "                  valuestextangle=-90.0,\n",
+    "                  strokew_axis=0.05,\n",
+    "                  strokew_horizontal_lines=0.025,\n",
     "                  showvalues=True,\n",
     "                  colorlist=px.colors.sequential.Viridis,\n",
     "                  hovercolor='blue',\n",
     "                  stdevnumber=100.0,\n",
     "                  valuedigits=2,\n",
-    "                  barpercentwidth=90.0,\n",
+    "                  barpercentwidth=95.0,\n",
     "                  enabledeselect=True,\n",
-    "                  showselection=False,\n",
+    "                  showselection=True,\n",
     "                  minallowed_value=0.0,\n",
     "                  maxallowed_value=1.0,\n",
     "                  on_change=on_change)\n",
@@ -56,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58f33b51",
+   "id": "0a830488",
    "metadata": {},
    "outputs": [],
    "source": []
